modals are nice

--- a/src/font-icons/variables.scss
+++ b/src/font-icons/variables.scss
@@ -3,5 +3,6 @@ $icomoon-font-path: "fonts" !default;
 
 $icon-prev: "\e90f";
 $icon-next: "\e910";
+$icon-close: "\e912";
 $icon-location: "\e945";
 
