--- a/src/font-icons/style.scss
+++ b/src/font-icons/style.scss
@@ -3,9 +3,9 @@
 @font-face {
   font-family: '#{$icomoon-font-family}';
   src:
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?n46dq2') format('truetype'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?n46dq2') format('woff'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?n46dq2##{$icomoon-font-family}') format('svg');
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?o03axa') format('truetype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?o03axa') format('woff'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?o03axa##{$icomoon-font-family}') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -34,6 +34,11 @@
 .icon-next {
   &:before {
     content: $icon-next; 
+  }
+}
+.icon-close {
+  &:before {
+    content: $icon-close; 
   }
 }
 .icon-location {
