--- a/src/left-column/contact-info/contactInfo.scss
+++ b/src/left-column/contact-info/contactInfo.scss
@@ -1,8 +1,17 @@
 #contact-info {
   margin: 5px 0px;
 
-  .email {
+  .email, .linkedin {
     text-decoration: none;
-    color: #0AE6E5;
+    color: white;
+  }
+
+  .email:hover, .linkedin:hover {
+    color: rgba(255, 255, 255, 0.12);
+  }
+
+  .linkedin {
+    padding-top: 5px;
+    float: left;
   }
 }
