--- a/src/projects/projects.scss
+++ b/src/projects/projects.scss
@@ -13,6 +13,11 @@
     .project-name {
       line-height: 30px;
       margin: 0px 20px;
+      cursor: pointer;
+
+      &:hover {
+        color: rgba(255, 255, 255, 0.12);
+      }
     }
 
     .click-next, .click-prev {
