Animations modal completion, more css

--- a/src/font-icons/variables.scss
+++ b/src/font-icons/variables.scss
@@ -1,6 +1,7 @@
 $icomoon-font-family: "bryan-web" !default;
 $icomoon-font-path: "fonts" !default;
 
+$icon-down: "\e90e";
 $icon-prev: "\e90f";
 $icon-next: "\e910";
 $icon-close: "\e912";
