--- a/src/font-icons/style.scss
+++ b/src/font-icons/style.scss
@@ -3,9 +3,9 @@
 @font-face {
   font-family: '#{$icomoon-font-family}';
   src:
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?o03axa') format('truetype'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?o03axa') format('woff'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?o03axa##{$icomoon-font-family}') format('svg');
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?aaocym') format('truetype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?aaocym') format('woff'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?aaocym##{$icomoon-font-family}') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -26,6 +26,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-down {
+  &:before {
+    content: $icon-down; 
+  }
+}
 .icon-prev {
   &:before {
     content: $icon-prev; 
