--- a/src/left-column/contact-info/contactInfo.scss
+++ b/src/left-column/contact-info/contactInfo.scss
@@ -1,17 +1,16 @@
 #contact-info {
   margin: 5px 0px;
 
-  .email, .linkedin {
+  > div{
+    margin-top: 8px;
+  }
+
+  .email, .linkedin, .github {
     text-decoration: none;
     color: white;
   }
 
-  .email:hover, .linkedin:hover {
+  .email:hover, .linkedin:hover, .github:hover {
     color: rgba(255, 255, 255, 0.12);
-  }
-
-  .linkedin {
-    padding-top: 5px;
-    float: left;
   }
 }
