--- a/src/modal/modal.scss
+++ b/src/modal/modal.scss
@@ -55,6 +55,37 @@
       right: 0;
       margin: 20px;
       cursor: pointer;
+
+      &:hover {
+        color: rgba(255, 255, 255, 0.04);
+      }
     }
+
+    .icon-down {
+      position: fixed;
+      color: #fff;
+      right: 10px;
+      font-size: 25px;
+
+      animation: bounce 0.5s infinite alternate;
+      -webkit-animation: bounce 0.5s infinite alternate;
+    }
+  }
+}
+
+@keyframes bounce {
+  from {
+    transform: translateY(0px);
+  }
+  to {
+    transform: translateY(-10px);
+  }
+}
+@-webkit-keyframes bounce {
+  from {
+    transform: translateY(0px);
+  }
+  to {
+    transform: translateY(-10px);
   }
 }
