--- a/src/work-exp/workExp.scss
+++ b/src/work-exp/workExp.scss
@@ -10,9 +10,33 @@
       line-height: 24px;
     }
 
-    iframe {
+    hr {
+      border-color: white;
+      opacity: 0.05;
+    }
+
+    iframe, .tpo-photo {
       border: 0;
       border-radius: 5px;
+    }
+    
+    .tpo-photo {
+      margin: 0 auto;
+      display: block;
+    }
+  }
+
+  #pie {
+    height: 256px;
+  }
+
+  .bry-button {
+    margin: 0px auto;
+    width: 190px;
+    height: 60px;
+
+    .bry-button-elem {
+      padding: 10px 40px;
     }
   }
 }
