fix scene sliding

--- a/src/modal/modal.scss
+++ b/src/modal/modal.scss
@@ -70,6 +70,12 @@
       animation: bounce 0.5s infinite alternate;
       -webkit-animation: bounce 0.5s infinite alternate;
     }
+
+    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 2s; /* Firefox < 16 */
+        -ms-animation: fadein 2s; /* Internet Explorer */
+         -o-animation: fadein 2s; /* Opera < 12.1 */
+            animation: fadein 2s;
   }
 }
 
@@ -88,4 +94,21 @@
   to {
     transform: translateY(-10px);
   }
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
 }
