--- a/src/work-exp/workExp.scss
+++ b/src/work-exp/workExp.scss
@@ -3,8 +3,14 @@
   max-width: 385px;
 
   .modal-container {
-    height: 900px; // default
-    width: 800px; // default
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 800px;
+    height: 800px;
+    transform: translate(-50%, -50%);
+    max-width: 100%;
+    max-height: 100%;
 
     p {
       line-height: 24px;
