--- a/src/projects/components/scene/scene.scss
+++ b/src/projects/components/scene/scene.scss
@@ -4,8 +4,7 @@
 #canvas {
   cursor: pointer;
   pointer-events: all;
-  width: 500px;
-  height: 500px;
+  width: 100%;
   margin: 15px auto;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
