--- a/src/about/about.scss
+++ b/src/about/about.scss
@@ -1,3 +1,15 @@
 #about {
-  margin: 20px;
+  margin: 65px 110px;
+
+  h2 {
+    margin: 0;
+  }
+
+  p {
+    line-height: 26px;
+  }
+
+  .name {
+    font-size: 22px;
+  }
 }
