--- a/src/panel/panel.scss
+++ b/src/panel/panel.scss
@@ -1,10 +1,17 @@
+@import '../mixins/elevation.scss';
+
 .panel {
-  border: 1px solid rgba(255, 255, 255, 0.12);
   border-radius: 5px;
   width: 100%;
   height: 100%;
 
   h2 {
     margin: 20px;
+  }
+
+  @include BoxShadow(16);
+
+  ::last-child {
+    box-shadow: none;
   }
 }
