--- a/src/work-exp/workExp.scss
+++ b/src/work-exp/workExp.scss
@@ -1,36 +1,39 @@
 #work-exp {
-  padding: 20px 5px 0px 20px;
-  max-width: 385px;
+  margin-top: 20px;
+  width: 100%;
 
-  .modal-container {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    width: 800px;
-    height: 800px;
-    transform: translate(-50%, -50%);
-    max-width: 100%;
-    max-height: 100%;
-
-    p {
-      line-height: 24px;
-    }
-
-    hr {
-      border-color: white;
-      opacity: 0.05;
-    }
-
-    iframe, .tpo-photo {
-      border: 0;
-      border-radius: 5px;
-    }
-    
-    .tpo-photo {
-      margin: 0 auto;
-      display: block;
-    }
+  .panel {
+    padding: 60px;
   }
+
+  .header {
+    font-size: 26px;
+    margin: 40px 0px 0px;
+  }
+
+  .sub-header {
+    margin: 5px 0;
+    color: rgba(255, 255, 255, 0.60);
+  }
+  
+  h2 {
+    margin: 10px 0;
+  }
+
+  p {
+    line-height: 24px;
+  }
+
+  hr {
+    border-color: white;
+    opacity: 0.05;
+  }
+
+  iframe, .tpo-photo {
+    border: 0;
+    border-radius: 5px;
+  }
+  
 
   #pie {
     height: 256px;
