update profile, add resume button, clean up code

--- a/src/projects/projects.scss
+++ b/src/projects/projects.scss
@@ -21,7 +21,7 @@
       
       line-height: 30px;
       margin: 0px 20px;
-      // TODO: fix highlighting of the pie
+      // TODO: project description
       // cursor: pointer;
 
       // &:hover {
