--- a/src/projects/projects.scss
+++ b/src/projects/projects.scss
@@ -9,12 +9,14 @@
   }
 
   .current-project {
+    border-radius: 25px;
+    background: rgba(0, 0, 0, 0.5);
     position: absolute;
     top: 450px;
     left: 50%;
     display: flex;
     justify-content: center;
-    padding-top: 10px;
+    padding: 10px;
     transform: translate(-50%, -50%);
 
     .project-name {
