--- a/src/work-exp/workExp.scss
+++ b/src/work-exp/workExp.scss
@@ -35,6 +35,12 @@
     opacity: 0.05;
   }
 
+  .lyra-photo {
+    border: 0;
+    border-radius: 5px;
+    width: 500px;
+  }
+
   iframe,
   .tpo-photo {
     border: 0;
